# ai-question-and-answer-service-EORA

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml  review.md
config/: .env.example
docker/: .dockerignore  Dockerfile  docker-compose.yml
docs/: DESCRIPTION.md
migrations/: env.py
migrations/versions/: 001.py  9cf2b31b4289_initial_migration.py  a97ac508fa52_remove_answer_sources_table_sources_no_.py
scripts/: Makefile  check_code.sh  precommit.sh
src/: main.py
src/application/dto/: converters.py
src/application/dto/requests/: __init__.py  question.py  source.py
src/application/dto/responses/: __init__.py  answer.py  error.py  question.py  question_answer.py  source.py
src/application/use_cases/: __init__.py  ask_question.py  create_question.py  find_relevant_sources.py  generate_answer.py  load_sources.py
src/core/application/: lifecycle.py
src/core/config/: __init__.py  app.py  base.py  database.py  llm.py  logging.py  vector_search.py
src/core/logging/: __init__.py  config.py
src/core/middleware/: logging.py
src/domain/entities/: __init__.py  answer.py  llm.py  question.py  question_answer.py  source.py
src/domain/exceptions/: __init__.py  base.py  repository.py  service.py
src/domain/repositories/: __init__.py  answer.py  question.py  source.py  vector_search.py
src/domain/services/: __init__.py  content_parsing.py  embedding.py  llm.py  llm_client.py  prompt_template.py  source_matching.py  text_chunking.py
src/infrastructure/database/: connection.py
src/infrastructure/database/models/: __init__.py  answer.py  base.py  question.py  question_answer.py  source.py  source_embedding.py
src/infrastructure/repositories/: __init__.py  answer.py  postgresql_vector_search.py  question.py  source.py
src/infrastructure/services/: __init__.py  anthropic_llm_client.py  llm.py  parser.py  postgresql_vector_source_matching.py  prompt_builder.py  russian_prompt_template.py  sentence_transformer_embedding.py  simple_text_chunking.py  source_matching.py
src/presentation/: errors.py
src/presentation/api/: health.py  load_source.py  question.py  router.py
src/presentation/dependencies/: __init__.py  database.py
src/presentation/dependencies/repositories/: __init__.py  answer.py  question.py  source.py  vector_search.py
src/presentation/dependencies/services/: __init__.py  services.py
src/presentation/dependencies/use_cases/: __init__.py  answer.py  question.py  source.py
src/presentation/setup/: __init__.py  create_app.py  exceptions.py  middleware.py
tools/: README.md  mypy.ini  ruff.toml  ty.toml
